--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
@@ -177,9 +177,11 @@
                         <img class="upload-image-icon" src="~/img/upload-image-icon.png" alt="Upload Image Icon" />
                     </label>
                     <!--TODO: Fix editing bug of not detecting image change in MedicationEdit form-->
-                    <input id="file-upload" type="file" name="medImage" style="display:none;" />
+                    <input id="file-upload" type="file" name="medImage" onchange="loadFile(event)" style="display:none;" />
                 </div>
             </div>
+            <label>Uploaded image</label>
+            <img id="med-img-output" width="300" style="object-fit:contain;" />
         </div>
 
         <input type="hidden" value="@Model.Medication.Shape" name="oldShape" />
@@ -194,6 +196,11 @@
 
         concatedUnit.value = numericUnit + " " + unitType;
     }
+
+    var loadFile = function (event) {
+        var image = document.getElementById('med-img-output');
+        image.src = URL.createObjectURL(event.target.files[0]);
+    };
 
     function shapeSelectorChange() {
         var selectedShape = document.getElementById("shape-selector").value;
