--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
@@ -102,9 +102,11 @@
                     <label for="file-upload" class="custom-file-upload">
                         <img class="upload-image-icon" src="~/img/upload-image-icon.png" alt="Upload Image Icon" />
                     </label>
-                    <input id="file-upload" type="file" name="medImage" style="display:none;" />
+                    <input id="file-upload" type="file" name="medImage" onchange="loadFile(event)" style="display:none;" />
                 </div>
             </div>
+            <label>Uploaded image</label>
+            <img id="med-img-output" width="300" style="object-fit:contain;"/>
         </div>
     </form>
 
@@ -116,6 +118,11 @@
 
             concatedUnit.value = numericUnit + " " + unitType;
         }
+
+        var loadFile = function (event) {
+            var image = document.getElementById('med-img-output');
+            image.src = URL.createObjectURL(event.target.files[0]);
+        };
 
         function shapeSelectorChange() {
             var selectedShape = document.getElementById("shape-selector").value;
